# pptx2pdfpc

./: .gitignore  README.md  pyproject.toml
pptx2pdfpc/: __main__.py  cli.py  extract.py
src/pptx2pdfpc/: cli.py  errors.py  extract.py
