[tool.poetry]
name = "pptx2pdfpc"
version = "0.1.0"
description = "Extracts speaker notes from a pptx and transforms it into a .pdfpc file that contains the notes."
authors = ["bytinbit <meline.sieber@ost.ch>"]
license = "AGPL v3.0"

[tool.poetry.scripts]
pptx2pdfpc = "pptx2pdfpc.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
python-pptx = "^0.6.21"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
